# beamng-protocols

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  readme.md
.github/workflows/: cmake-linux-windows.yml
src/: main.cpp  os_check.h
src/beamng/: data.cpp  data.h
src/console/: console.cpp  console.h
src/conversion/: conversion.cpp  conversion.h
src/format/: format.cpp  format.h
